{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 33,
  "lineage": "9dc861ac-bc5d-fcb2-d03a-b213d2f2d35d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "challenge_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb/loadBalancingRules/challenge_lb_rule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/publicIPAddresses/challenge-public-ip"
              }
            ],
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb",
            "location": "centralus",
            "name": "challenge-lb",
            "resource_group_name": "challenge-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.challenge_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "challenge_bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb/backendAddressPools/BackendAddressPool",
            "loadbalancer_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb",
            "name": "BackendAddressPool"
          },
          "dependencies": [
            "azurerm_lb.challenge_lb",
            "azurerm_public_ip.challenge_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "challenge_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb/loadBalancingRules/challenge_lb_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/loadBalancers/challenge-lb",
            "name": "challenge_lb_rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.challenge_lb",
            "azurerm_public_ip.challenge_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "internal_domain_name_suffix": "mbxwogxe4ime1njmjj5btgwjlg.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Ipconfiguration3",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "00-22-48-48-B0-30",
            "name": "nic1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "challenge-rg",
            "virtual_machine_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Compute/virtualMachines/vm1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkInterfaces/nic2",
            "internal_domain_name_suffix": "mbxwogxe4ime1njmjj5btgwjlg.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Ipconfiguration3",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "00-0D-3A-9E-CF-0D",
            "name": "nic2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "challenge-rg",
            "virtual_machine_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Compute/virtualMachines/vm2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkInterfaces/nic3",
            "internal_domain_name_suffix": "mbxwogxe4ime1njmjj5btgwjlg.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Ipconfiguration3",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet3"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "nic3",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "challenge-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub3",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "location": "centralus",
            "name": "nsg-1",
            "resource_group_name": "challenge-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-Internal",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-3",
            "location": "centralus",
            "name": "nsg-3",
            "resource_group_name": "challenge-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Traffic-Internal",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "challenge_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/publicIPAddresses/challenge-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.182.162.241",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "challenge-public-ip",
            "resource_group_name": "challenge-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "challenge-rg",
            "virtual_network_name": "challenge-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "challenge-rg",
            "virtual_network_name": "challenge-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet3",
            "name": "subnet3",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "challenge-rg",
            "virtual_network_name": "challenge-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet4",
            "name": "subnet4",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "challenge-rg",
            "virtual_network_name": "challenge-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "first_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "subnet_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "third_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet2",
            "network_security_group_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-3",
            "subnet_id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1a676f60-f2e4-4d18-b52c-4a7e199ac95e",
            "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet",
            "location": "centralus",
            "name": "challenge-vnet",
            "resource_group_name": "challenge-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-1"
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet2",
                "name": "subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-3"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet3",
                "name": "subnet3",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7aa42b38-3d5e-4711-b3b0-fde054e92142/resourceGroups/challenge-rg/providers/Microsoft.Network/virtualNetworks/challenge-vnet/subnets/subnet4",
                "name": "subnet4",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}